# envoy-build-tools

./: .gitignore  .travis.yml  CODEOWNERS  MODULE.bazel  README.md  TOOLS_VERSION  WORKSPACE  azure-pipelines.yml  bazel_toolchains_ext.bzl  non_module_deps.bzl  not-secret.key  requirements.in  requirements.txt  toolchain.patch
.azure-pipelines/: cleanup.sh  generate_toolchains.yml
.github/: config.yml  dependabot.yml
.github/workflows/: _build_image.yml  _publish_assets.yml  _regenerate_toolchain.yml  build.yml  build_container.yml  lint.yml
build_container/: CENTOS7_BUILD_STATUS.md  Dockerfile-centos  Dockerfile-debian  Dockerfile-docs  Dockerfile-mobile  Dockerfile-oraclelinux  Dockerfile-ubuntu  Dockerfile-windows  Dockerfile-windows2019  README.md  build-docs.sh  build_container_centos.sh  build_container_centos_llvm.sh  build_container_common.sh  build_container_debian.sh  build_container_developer.sh  build_container_docker.sh  build_container_docs.sh  build_container_llvm.sh  build_container_llvm_ubuntu.sh  build_container_mobile.sh  build_container_oraclelinux.sh  build_container_ubuntu.sh  build_container_ubuntu_base.sh  build_container_ubuntu_llvm.sh  build_container_windows.ps1  docker_build.sh  docker_build_linux.sh  docker_build_windows.sh  docker_push.sh  docker_push_windows.sh  docs-entrypoint.sh  profile_centos.sh  sudoers_centos
docker/: README.md  push.sh
self-run-agents/: README.md
toolchains/: BUILD  README.md  clang-cl.env.json  gcc.env.json  linux.latest.bazelrc  rbe_toolchains_config.bzl  regenerate.sh  windows.latest.bazelrc
(+238 files in other folders)
