module(
    name = "envoy_build_tools",
    version = "",
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
# -- bazel_dep definitions -- #

non_module_deps = use_extension("//:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "bazel_toolchains")

bazel_toolchains_ext = use_extension("//:bazel_toolchains_ext.bzl", "bazel_toolchains_ext")
use_repo(bazel_toolchains_ext, "rbe_default")
